--- a/blog-app-apis/src/main/resources/application.properties
+++ b/blog-app-apis/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port = 9090
 
+# db configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_apis
+spring.datasource.username=root
+spring.datasource.password=JAIsriram@9
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# create, update, validate, create-drop
+spring.jpa.hibernate.ddl-auto=update 
